force-app/main/default/objects/Merchant_Feedback__c/Merchant_Feedback__c.object-meta.xml
<CustomObject>
    <label>Merchant Feedback</label>
    <nameField>
        <label>Merchant Feedback Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merchant Feedback</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>