force-app/main/default/objects/Merchant_Feedback__c/fields/Business_Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Business_Project_Status__c</fullName>
    <formula>TEXT(Project__r.Stage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Project Status</label>
    <type>Text</type>
</CustomField>