force-app/main/default/objects/Merchant_Feedback__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Feedback</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Feedback_Category__c</field>
            <operation>equals</operation>
            <valueField>Business_Project__c.Category__c</valueField>
        </filterItems>
        <infoMessage>You could use Category field to filter feedbacks proposals</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Business_Project__c</referenceTo>
    <relationshipLabel>Merchant Feedback</relationshipLabel>
    <relationshipName>Merchant_Feedback_relationships</relationshipName>
    <type>Lookup</type>
</CustomField>