force-app/main/default/objects/Merchant_Feedback__c/fields/Feedback_Category__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Category__c</fullName>
    <label>Feedback Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Feedback_category</valueSetName>
    </valueSet>
</CustomField>