force-app/main/default/objects/Merchant_Feedback__c/fields/Feedback_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Subcategory__c</fullName>
    <label>Feedback Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Feedback_Subcategory</valueSetName>
    </valueSet>
</CustomField>