force-app/main/default/objects/Merchant_Feedback__c/fields/Issue_KPI__c.field-meta.xml
<CustomField>
    <fullName>Issue_KPI__c</fullName>
    <label>Issue KPIs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Issue_KPI</valueSetName>
    </valueSet>
</CustomField>