force-app/main/default/objects/Merchant_Feedback__c/fields/Issue_Severity__c.field-meta.xml
<CustomField>
    <fullName>Issue_Severity__c</fullName>
    <inlineHelpText>Pain Level</inlineHelpText>
    <label>Issue Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <default>true</default>
                <label>Low</label>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>