force-app/main/default/objects/Merchant_Feedback__c/fields/Merchant__c.field-meta.xml
<CustomField>
    <fullName>Merchant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Merchant</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Merchant_Feedback_relationships</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>