force-app/main/default/objects/Merchant_Feedback__c/fields/Merchant_GMV_Last_30_Days__c.field-meta.xml
<CustomField>
    <fullName>Merchant_GMV_Last_30_Days__c</fullName>
    <formula>Merchant__r.GMV_last_30_days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merchant GMV Last 30 Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>