force-app/main/default/objects/Merchant_Feedback__c/fields/Merchant_Owner__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Owner__c</fullName>
    <formula>Merchant__r.Owner.FirstName &amp;&quot; &quot;&amp; Merchant__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merchant Owner</label>
    <type>Text</type>
</CustomField>