force-app/main/default/objects/Merchant_Feedback__c/fields/Merchant_Stage__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Stage__c</fullName>
    <formula>TEXT( Merchant__r.Stage__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merchant Stage</label>
    <type>Text</type>
</CustomField>