force-app/main/default/objects/Merchant_Feedback__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <description>Look for existing project</description>
    <label>Project</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR 3</booleanFilter>
        <filterItems>
            <field>$Source.Feedback_Category__c</field>
            <operation>equals</operation>
            <valueField>Business_Project__c.Category__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Feedback_Subcategory__c</field>
            <operation>equals</operation>
            <valueField>Business_Project__c.Subcategory__c</valueField>
        </filterItems>
        <filterItems>
            <field>Business_Project__c.Id</field>
            <operation>equals</operation>
            <value>a1r3X000005RnZ3QAK</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Business_Project__c</referenceTo>
    <relationshipLabel>Merchant Feedback</relationshipLabel>
    <relationshipName>Project</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>