force-app/main/default/objects/Merchant_Feedback__c/fields/Proposed_Solution__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Solution__c</fullName>
    <description>Information collected from Merchant</description>
    <label>Proposed Solution</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>