force-app/main/default/objects/Merchant_Feedback__c/recordTypes/New_Merchant_Feedback.recordType-meta.xml
<RecordType>
    <fullName>New_Merchant_Feedback</fullName>
    <active>true</active>
    <label>New Merchant Feedback</label>
</RecordType>